# instagram_bot

./: Cargo.toml
src/: elements.rs  enums.rs  error.rs  http_requests.rs  lib.rs  session.rs  tab.rs  timeouts.rs
tests/: tests.rs
