[package]
name        = "lw-webdriver"
version     = "0.4.1"
authors     = ["Mubelotix <mubelotix@gmail.com>"]
edition     = "2018"
description = "A lightweight webdriver client."
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/Mubelotix/webdriver"
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.7"
log        = "0.4"
minreq     = { version = "2.0" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
